-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2012-01-08	pwessel
	* grdcut.c:		The -Z would give incorrect -R for pixel grids.  Now also
				print warning if output grid equals input grid (no change).

2012-01-08      remko
	* xyz2grd.txt:		Added missing 'H' and 'I' to -Z options.
	* xyz2grd.c:		Bug fix: -Z..h etc needs to imply proper -bi setting.
	* gmt_io.c, gmtapi_util.c:	Bug fixes: now properly identifying all I/O types.
				Fixed incorrect swapping of signed integers (short and long).

2012-01-06	pwessel
	* gmt_plot.c:		Made geo_vector properly adjust for half-head vectors
	* pslib.c:		Made psl_vector and psl_matharc adjust for half-head vectors
	* gmt_init.c:		Revised -Sf front syntax to use modifiers. Backwards compatible.
	* gmt_plot.c:		In GMT_xy_axis, string[GMT_CALSTRING_LENGTH] was used to hold
				labels that could be longer, leading to memory corruption.

2012-01-05	jluis
	* gmt_customio.c:	Make nx and ny of 'unsigned short int' type in surfer6 header.
				Note that original format specification by Golden Software
				clearly say they are 'short int' but this change shouldn't
				break anything and will allow dealing with larger grid sizes. 

2012-01-04	pwessel
	* grdvector.c:		Updated -Q to take new vector specification format.
				Made -E obsolete (since covered by modifier +jc) but
				is still active under compatibility mode.
	* psrose.c:		Updated -M to take new vector specification format.
				Added -Wv<pen> to specify pen for vector (in -C).

2012-01-01	pwessel
	* gmt_plot.c:		Let +n<norm> be modifier for all vectors
	* gmt_init.c:		---"---
	* pslib.c:		Treat all vectors similarly regarding pen/fill

2011-12-30	pwessel
	* gmt_init.c:		Groundwork for new vector specifications
	* gmt_io.c:		Fixed bug with empty segments with headers
	* gmtapi_utils.c	Fixed bug in setting next input file