@@ -1,11 +1,11 @@
 %!PS-Adobe-3.0
 %%BoundingBox: 0 0 252 299
 %%HiResBoundingBox: 0 0 252 298.8
-%%Title: GMT v5.0.0_r9629:9632 [64-bit] Document from GMT_grdimage
+%%Title: GMT v5.0.0_r9645 [64-bit] Document from GMT_grdimage
 %%Creator: GMT
 %%For: pwessel
 %%DocumentNeededResources: font Helvetica
-%%CreationDate: Sat Jan  7 14:41:46 2012
+%%CreationDate: Mon Jan  9 08:46:32 2012
 %%LanguageLevel: 2
 %%DocumentData: Clean7Bit
 %%Orientation: Portrait
@@ -577,7 +577,7 @@ O0
 420 360 TM
 
 % PostScript produced by:
-%%GMT:  grdimage ../../tutorial/us.nc -I83104.us_int.nc -JM3i -P -K -C83104.cpt -B1WSne -X0.35i -Y0.3i --PS_MEDIA=3.5ix4.15i --FONT_ANNOT_PRIMARY=9p
+%%GMT:  grdimage ../../tutorial/us.nc -I11702.us_int.nc -JM3i -P -K -C11702.cpt -B1WSne -X0.35i -Y0.3i --PS_MEDIA=3.5ix4.15i --FONT_ANNOT_PRIMARY=9p
 %%PROJ: merc -108.00000000 -103.00000000 35.00000000 40.00000000 -278298.727 278298.727 4139372.762 4838471.398 +proj=merc +lon_0=-105.5 +k=-1 +x_0=0 +y_0=0 +a=6378137.000 +b=6356752.314245
 0 setlinecap
 0 setlinejoin
@@ -13905,7 +13905,7 @@ O0
 0 0 TM
 
 % PostScript produced by:
-%%GMT:  psxy -R../../tutorial/us.nc -JM3i -O -Sv0.05i+e -Gred -Wthick
+%%GMT:  psxy -R../../tutorial/us.nc -JM3i -O -Sv0.1i+e -Gred -Wthick
 %%PROJ: merc -108.00000000 -103.00000000 35.00000000 40.00000000 -278298.727 278298.727 4139372.762 4838471.398 +proj=merc +lon_0=-105.5 +k=-1 +x_0=0 +y_0=0 +a=6378137.000 +b=6356752.314245
 0 setlinecap
 0 setlinejoin
@@ -13921,11 +13921,11 @@ PSL_eoclip N
 O1
 17 W
 V 3060 527 T 180 R
-0 0 M 384 0 D S
+0 0 M 324 0 D S
 U
 V 2616 527 T 180 R 0 0 M
--60 16 D
-0 -32 D
+-120 32 D
+0 -64 D
 P clip FO U
 PSL_cliprestore
 %%PageTrailer
